k8s/policies/validate-task-request-datasets/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sValidateTaskRequestDatasets
metadata:
  name: validate-task-request-datasets
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["policydriven.unimi.it"]
        kinds: ["TaskRequest"]
