k8s/policies/validate-task-request-datasets/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8svalidatetaskrequestdatasets
spec:
  crd:
    spec:
      names:
        kind: K8sValidateTaskRequestDatasets
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8svalidatetaskrequestdatasets

        issuer := input.review.object.spec.issuer
        dataset_list := input.review.object.spec.datasets

        property_inventory := data.inventory.cluster["policydriven.unimi.it/v1alpha1"]["NodeProperty"]
        group_inventory := data.inventory.cluster["policydriven.unimi.it/v1alpha1"]["GeographicalGroup"]

        dataset_response := external_data({
          "provider": "dataset-service",
          "keys": dataset_list
        })

        issuer_auth_response := external_data({
          "provider": "context-service",
          "keys": [issuer]
        })

        not_empty_dataset_list {
          dataset_list != null
          count(dataset_list) > 0
        }

        not_null_issuer {
          issuer != null
        }

        valid_property_level(prop_name, req_level) {
          prop := property_inventory[prop_name]
          req_level >= 0
          req_level <= count(prop.spec.levels)
        }

        list_contains(list, x) {
          list[_] == x
        }

        # ---------------------------------------------------------------------
        # Violation: the dataset provider reported a system-wide failure.
        # ---------------------------------------------------------------------
        violation[{"msg": msg}] {
          not_empty_dataset_list

          dataset_response.system_error != ""

          msg := sprintf("Dataset provider system error: %v", [dataset_response.system_error])
        }

        # ---------------------------------------------------------------------
        # Violation: the dataset provider reported a failure for at least one 
        # dataset.
        # ---------------------------------------------------------------------
        violation[{"msg": msg}] {
          not_empty_dataset_list

          dataset_response.system_error == ""

          count(dataset_response.errors) > 0

          some i
          error := dataset_response.errors[i]
          error != null

          msg := sprintf("Dataset error: [dataset: '%v', error: '%v']", [error[0], error[1]])
        }

        # ---------------------------------------------------------------------
        # Violation: the dataset provider returned no data for the requested 
        # datasets (inconsistent response).
        # ---------------------------------------------------------------------
        violation[{"msg": msg}] {
          not_empty_dataset_list

          dataset_response.system_error == ""
          
          count(dataset_response.errors) == 0
          count(dataset_response.responses) == 0

          msg := sprintf("Dataset provider returned no data for datasets '%v' (inconsistent response)", [dataset_list])
        }

        # ------------------------------------------------------------------
        # Violation: invalid requested property in the TaskRequest 
        # requirements of at least one dataset.
        # ------------------------------------------------------------------
        violation[{"msg": msg}] {
          not_empty_dataset_list

          dataset_response.system_error == ""

          count(dataset_response.responses) > 0

          some i
          item := dataset_response.responses[i]
          key := item[0]
          value := item[1]

          some prop_name
          value.requirements[prop_name]

          not property_inventory[prop_name]
          msg := sprintf("Dataset '%v': NodeProperty '%v' does not exist in the cluster", [key, prop_name])
        }

        # ------------------------------------------------------------------
        # Violation: invalid level for an existing property in the
        # TaskRequest requirements of at least one dataset.
        # ------------------------------------------------------------------
        violation[{"msg": msg}] {
          not_empty_dataset_list

          dataset_response.system_error == ""

          count(dataset_response.responses) > 0

          some i
          item := dataset_response.responses[i]
          key := item[0]
          value := item[1]

          some prop_name
          req_level := value.requirements[prop_name]
          req_level != 0

          property_inventory[prop_name]

          not valid_property_level(prop_name, req_level)
          msg := sprintf("Dataset '%v': NodeProperty '%v' exists, but level '%v' is not defined", [key, prop_name, req_level])
        }

        # ---------------------------------------------------------------------
        # Violation: dataset geo refers to a GeographicalGroup that does not 
        # exist
        # ---------------------------------------------------------------------
        violation[{"msg": msg}] {
          not_empty_dataset_list

          dataset_response.system_error == ""

          count(dataset_response.responses) > 0

          some i
          item := dataset_response.responses[i]
          key := item[0]
          value := item[1]

          geo := value.geo
          geo != null

          not group_inventory[geo]

          msg := sprintf("Dataset '%v': GeographicalGroup '%v' does not exist in the cluster", [key, geo])
        }

        # ---------------------------------------------------------------------
        # Violation: the context provider reported a system-wide failure.
        # ---------------------------------------------------------------------
        violation[{"msg": msg}] {
          not_null_issuer

          issuer_auth_response.system_error != ""

          msg := sprintf("Context provider system error: %v", [issuer_auth_response.system_error])
        }

        # ---------------------------------------------------------------------
        # Violation: the context provider reported a failure for at least one 
        # issuer authorization.
        # ---------------------------------------------------------------------
        violation[{"msg": msg}] {
          not_null_issuer

          issuer_auth_response.system_error == ""

          count(issuer_auth_response.errors) > 0

          some i
          error := issuer_auth_response.errors[i]
          error != null

          msg := sprintf("Issuer authorization error: [issuer: '%v', error: '%v']", [error[0], error[1]])
        }

        # ---------------------------------------------------------------------
        # Violation: the context provider returned no data for the issuer 
        # authorization (inconsistent response).
        # ---------------------------------------------------------------------
        violation[{"msg": msg}] {
          not_null_issuer

          issuer_auth_response.system_error == ""

          count(issuer_auth_response.errors) == 0
          count(issuer_auth_response.responses) == 0

          msg := sprintf("Context provider returned no data for issuer '%v' (inconsistent response)", [issuer])
        }

        # ---------------------------------------------------------------------
        # Violation: c_auth validation.
        # Some dataset d in req(t) has a context not covered by auth(iss(t)).
        # ---------------------------------------------------------------------
        violation[{"msg": msg}] {
          not_null_issuer
          not_empty_dataset_list

          dataset_response.system_error == ""
          issuer_auth_response.system_error == ""

          count(dataset_response.responses) > 0
          count(issuer_auth_response.responses) > 0

          auth := issuer_auth_response.responses[0][1].contexts

          some i
          item := dataset_response.responses[i]
          key := item[0]
          value := item[1]

          ctx := value.contexts[_]
          not list_contains(auth, ctx)

          msg := sprintf("Dataset '%v': context '%v' is not authorized for issuer '%v'", [key, ctx, issuer])
        }
